Fixed position on mobile header

--- a/src/components/Head.css
+++ b/src/components/Head.css
@@ -21,6 +21,11 @@
   z-index: 100;
 }
 
+.mobile-menu {
+  position: fixed;
+  width: 100%;
+}
+
 .dropdown-item{
   font-size: 10px;
   background-color: white;
